Fixed: Updated style for speedtestfeedback to ensure result is not truncated in minimize mode

--- a/src/main/resources/style/style.css
+++ b/src/main/resources/style/style.css
@@ -179,6 +179,19 @@
     -fx-effect: dropshadow(three-pass-box, -color-accent-blue, 10, 0.7, 0, 0);
 }
 
+.feedback-container {
+    -fx-padding: 0 40;
+}
+
+.feedback-label {
+    -fx-text-fill: -color-text-muted;
+    -fx-font-size: 13px;
+    -fx-text-alignment: CENTER;
+    -fx-wrap-text: true;
+    -fx-max-width: 320px;
+    -fx-min-height: 45px;
+}
+
 /* UI controls */
 
 .pulse-button {
